Fixes for firefox, as well as some layout issues

--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 body {
+
+    padding: 0;
+    margin: 0;
+}
+
+#app {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    padding: 0;
-    margin: 0;
     width: 100%;
     height: 100vh;
     font-family: 'Lato', sans-serif;
